fix horizontal scrolling

--- a/src/input.css
+++ b/src/input.css
@@ -211,6 +211,7 @@ h4{
 }
   body {
     font-family: 'Prompt', sans-serif;
+    background-color:#f0e9e1;
   }
 
   .font-prompt {
